Updating profile formating and posts

--- a/writing/index.html
+++ b/writing/index.html
@@ -2,9 +2,9 @@
 layout: default
 title: "Vipin Madhavanunni: Writing"
 redirect_from: "/blog"
-nav_item: writing
+nav_item: posts
 nav_item_writing: all
-header_title: Writing
+header_title: Posts 
 include_header: writing_header.html
 include_comments:
   count: true
