--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,7 @@ nav_item: projects
       <a href="{{ project.url }}" target="_blank" name="{{ project.name | downcase | replace:' ','-' | remove:',' }}"><h2 class="mt0 mb0">{{ project.name }}</h2></a>
       <h5>{{ project.name_long }}</h5>
       {% if project.org != null %}
-        <i class="fa fa-fw fa-lg fa-institution"></i>
+        <i class="fa fa-fw fa-lg fa-building-o"></i>
       	<span class="h5">{{ project.org }}</span>
         <br>
       {% endif %}
