--- a/writing/video/index.html
+++ b/writing/video/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: "Vipin Madhavanunni: Favorite Writing"
-nav_item: writing   
-nav_item_writing: popular 
-header_title: Favorite posts
+title: "Vipin Madhavanunni: Videos"
+nav_item: video
+nav_item_writing: video 
+header_title: Videos
 include_header: writing_header.html
 include_comments:
   count: true
@@ -12,7 +12,7 @@ include_comments:
 {% include writing-nav.html %}
 
 {% for post in site.posts %}
-  {% if post.add_to_popular_list %}  
+  {% if post.tags contains 'Short Film' %}  
     {% include post-outline.html post=post %}
   {% endif %}
 {% endfor %}
