--- a/writing/video/index.html
+++ b/writing/video/index.html
@@ -4,7 +4,7 @@ title: "Vipin Madhavanunni: Videos"
 nav_item: video
 nav_item_writing: video 
 header_title: Videos
-include_header: writing_header.html
+include_header: video_header.html
 include_comments:
   count: true
 ---
@@ -13,7 +13,7 @@ include_comments:
 
 {% for post in site.posts %}
   {% if post.tags contains 'Short Film' %}  
-    {% include post-outline.html post=post %}
+    {% include video-outline.html post=post %}
   {% endif %}
 {% endfor %}
 
