--- a/writing/fos/index.html
+++ b/writing/fos/index.html
@@ -11,7 +11,7 @@ include_comments:
 
 {% include writing-nav.html %}
 <br>
-<section class="no-padding" id="portfolio">
+<article class="mxn2 clearfix mb2 border-bottom border-light-gray circle-line py3">
   <div class="container-fluid">
     <div class="row no-gutter">
 	{% for post in site.posts %}
@@ -21,4 +21,4 @@ include_comments:
         {% endfor %}
     </div>
   </div>
-</section>
+</article>
