--- a/writing/wish/index.html
+++ b/writing/wish/index.html
@@ -13,7 +13,7 @@ include_comments:
 
 {% for post in site.posts %}
   {% if post.tags contains 'Wish' %}  
-    {% include post-outline.html post=post %}
+    {% include wish-outline.html post=post %}
   {% endif %}
 {% endfor %}
 
