Updating small errors

--- a/skip.html
+++ b/skip.html
@@ -1,9 +1,9 @@
 ---
 title: "404: page not found."
 layout: default
-permalink: /404.html
+permalink: /skype.html
 ---
 
-<h1>404</h1>
+<h1>Skype This</h1>
 
-Page not found.
+Page should be skyped.
