--- a/projects/index.html
+++ b/projects/index.html
@@ -21,6 +21,7 @@ nav_item: projects
 <!--
       <a href="{{ project.url }}" target="_blank" name="{{ project.name | downcase | replace:' ','-' | remove:',' }}">
 -->
+         <a id="{{ project.id }}"></a>
          <h2 class="mt0 mb0">{{ project.name }}</h2>
 <!--
       </a>
