--- a/cms.html
+++ b/cms.html
@@ -35,11 +35,11 @@ extra_styles:
 		<div class="form-inline">
 			<div class="form-group">
 				<label for="username" class="sr-only">Username</label>
-				<input type="text" class="form-control" id="username" placeholder="GitHub username">
+				<input type="text" class="form-control" id="username" placeholder="Username">
 			</div>
 			<div class="form-group">
 				<label for="password" class="sr-only">password</label>
-				<input type="password" class="form-control" id="password" placeholder="GitHub password">
+				<input type="password" class="form-control" id="password" placeholder="Password">
 			</div>
 			<input type="button" class="btn btn-default" id="go" value="Post" /> 
 		</div>
