--- a/profile/index.html
+++ b/profile/index.html
@@ -32,6 +32,7 @@ nav_item: profile
                 {% include {{section_layout}} %}
               {% endif %}
             {% endfor %}
+        <a href="#top" class="sm-col-right col dark-gray width-120"><i class="fa fa-fw fa-lg fa-angle-double-up"></i>Top</a>
     </div>
   {% endfor %}
 
