--- a/writing/fos/index.html
+++ b/writing/fos/index.html
@@ -22,3 +22,5 @@ include_comments:
     </div>
   </div>
 </article>
+<a href="#top" class="sm-col-right col dark-gray width-120 h6"><i class="fa fa-fw fa-lg fa-angle-double-up"></i>Top</a>
+
