--- a/projects/index.html
+++ b/projects/index.html
@@ -60,5 +60,9 @@ nav_item: projects
           </a><br>
       {% endif %}
     </div>
+    <a href="#top" class="sm-col-right col dark-gray width-120">
+       <i class="fa fa-fw fa-lg fa-angle-double-up"></i>
+       Top
+    </a>
   </div>
 {% endfor %}
