--- a/projects/index.html
+++ b/projects/index.html
@@ -60,7 +60,7 @@ nav_item: projects
           </a><br>
       {% endif %}
     </div>
-    <a href="#top" class="sm-col-right col dark-gray width-120">
+    <a href="#top" class="sm-col-right col dark-gray h6">
        <i class="fa fa-fw fa-lg fa-angle-double-up"></i>
        Top
     </a>
