--- a/contact/index.html
+++ b/contact/index.html
@@ -33,7 +33,7 @@ nav_item: contact
     </form>
     <script>
       var contactform =  document.getElementById('contactform');
-      contactform.setAttribute('action', '//formspree.io/' + 'VMWEB+vipmadha' + '@' + 'gmail' + '.' + 'com');
+      contactform.setAttribute('action', '//formspree.io/' + 'vipmadha' + '@' + 'gmail' + '.' + 'com');
     </script>
     <br>
   </div>
