--- a/contact/index.html
+++ b/contact/index.html
@@ -22,14 +22,14 @@ nav_item: contact
       Email:<br>
       <input type="email" name="_replyto" placeholder="Your email" required>
       <br>
-      <input type="hidden" name="_subject" value="Website contact" />
+      Subject:<br>
+      <input type="text" name="_subject" value="Subject for contact" required>
+      <br>
       Message:<br>
       <textarea name="message" placeholder="Your message" required></textarea>
       <br>
-<!--
       <input type="text" name="_gotcha" style="display:none" />
       <br>
--->
       <input type="submit" value="Send">
       <br>
     </form>
