--- a/contact/index.html
+++ b/contact/index.html
@@ -23,7 +23,7 @@ nav_item: contact
       <input type="email" name="_replyto" placeholder="Your email" required>
       <br>
       Subject:<br>
-      <input type="text" name="_subject" value="Subject for contact" required>
+      <input type="text" name="_subject" placeholder="Subject for contact" required>
       <br>
       Message:<br>
       <textarea name="message" placeholder="Your message" required></textarea>
