--- a/contact/index.html
+++ b/contact/index.html
@@ -32,13 +32,13 @@ nav_item: contact
       <input type="text" name="_gotcha" style="display:none" />
       <br>
       <input type="submit" value="Send">
-      <script type="application/javascript">
-  	function getIP(json) {
-    	document.write("From: ", json.ip);
-  	}
-      </script>
       <br>
     </form>
+    <script type="application/javascript">
+        function getIP(json) {
+        document.write("Submiting from: ", json.ip);
+        }
+    </script>
     <script>
       var contactform =  document.getElementById('contactform');
       contactform.setAttribute('action', '//formspree.io/' + 'vipmadha' + '@' + 'gmail' + '.' + 'com');
