--- a/contact/index.html
+++ b/contact/index.html
@@ -29,12 +29,14 @@ nav_item: contact
       <br>
       <input type="text" name="_gotcha" style="display:none" />
       <br>
+<!-- FiXIT
       <script type="application/javascript"> 
         function getIP(json) { 
           document.write("Sending from: ", json.ip); 
           }
       </script>
       <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
+-->
       <input type="submit" value="Send"> 
       <br>
     </form>
